[bumpversion]
commit = True
current_version = 0.4.0
files = asgi_babel/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = asgi-babel
version = attr: asgi_babel.__version__
url = https://github.com/klen/asgi-babel
description = Adds internationalization (i18n) support to ASGI applications (Asyncio_ / Trio_)
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = localization, integnationalization, i18n, babel, asgi, asyncio, trio
project_urls = 
	Documentation = https://github.com/klen/asgi-babel
	Source code = https://github.com/klen/asgi-babel
	Issue tracker = https://github.com/klen/asgi-babel/issues
classifiers = 
	Topic :: Software Development :: Internationalization
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = asgi_babel
python_requires = >= 3.7
install_requires = 
	asgi-tools      >= 0.26
	babel

[options.package_data]
asgi_babel = py.typed

[options.extras_require]
tests = 
	anyio
	pytest
	pytest-mypy
	trio
        curio
build = 
	bump2version
	twine
	wheel
example = 
	uvicorn

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D

[mypy]

[mypy-babel]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests
